<resources>
    <string name="app_name">Music</string>
    <string name="app_name_actual">GEM Player</string>
    <string name="title_activity_albums">Album</string>
    <string name="title_activity_main">Music</string>
    <string name="title_activity_main_goog_experience">My Library</string>
    <string name="title_activity_now_playing">Now Playing</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_choose_icon">Choose Icon</string>
    <string name="title_activity_quick_peek">Quick Peek</string>
    <string name="title_activity_album_color">Change Color</string>
    <string name="title_activity_search">Search</string>
    <string name="action_settings">@string/title_activity_settings</string>
    <string name="action_stop">Stop</string>
    <string name="action_search">Search</string>
    <string name="action_reset_icons">Reset Icons</string>
    <string name="action_test_icons">Enable All Icons (Testing Purposes)</string>
    <string name="action_place_shortcut">Add this icon to the homescreen</string>
    <string name="action_donate">Donate</string>
    <string name="action_bug_report">Report a bug</string>
    <string name="search_empty">No Results</string>
    <string name="search_hint">Search Library…</string>
    <string name="page_home">Home</string>
    <string name="page_albums">Albums</string>
    <string name="page_songs">Songs</string>
    <string name="page_playlists">Playlists</string>
    <string name="page_artists">Artists</string>
    <string name="page_genres">Genres</string>
    <string name="drawer_open">Open the App Drawer</string>
    <string name="drawer_close">Close the App Drawer</string>
    <string name="settings_header_tweak_ui">Tweak UI</string>
    <string name="settings_ui_customizer_category_general">General</string>
    <string name="settings_ui_customizer_category_main_screen">Home</string>
    <string name="settings_ui_customizer_category_album_details">Albums Details</string>
    <string name="settings_ui_customizer_category_now_playing">Now Playing</string>
    <string name="settings_header_playback">Playback</string>
    <string name="settings_header_dev">Developer</string>
    <string name="settings_header_general">General</string>
    <string name="settings_aww">AWW</string>
    <string name="about_libraries_header">Libraries Used:</string>
    <string name="about_thanks_header">With special thanks to:</string>
    <string name="about_appcompat">Google Support Libraries</string>
    <string name="about_palette">Palette</string>
    <string name="about_glide">Glide</string>
    <string name="about_gitty">Gitty Reporter</string>
    <string name="about_appintro">AppIntro</string>
    <string name="about_fast_scroll">Recycler Fast Scroll</string>
    <string name="about_dialogs">Material Dialogs</string>
    <string name="about_icon">Designed icons</string>
    <string name="about_helped">Helped Development</string>
    <string name="about_managed">Managed the Project</string>
    <string name="about_Karim">Karim Abou Zeid</string>
    <string name="about_Neel">Neel Raj</string>
    <string name="about_Substance">Substance Open Source</string>
    <string name="settings_select_base_theme">Select Theme</string>
    <string name="settings_theme_title_choose">Pick a theme</string>
    <string name="settings_theme_title_variant">Pick a variant</string>
    <string name="settings_theme_animbus">Animbus</string>
    <string name="settings_theme_default">Default</string>
    <string name="settings_theme_custom">Custom</string>
    <string name="settings_theme_variant_light">Light</string>
    <string name="settings_theme_variant_dark">Dark</string>
    <string name="settings_theme_variant_grey">Grey</string>
    <string name="settings_theme_variant_default">Default</string>
    <string name="settings_theme_blue">Blue</string>
    <string name="settings_theme_pink">Pink</string>
    <string name="settings_theme_greyscale">Greyscale</string>
    <string name="settings_header_old">Old</string>
    <string name="settings_old_light_theme">Use Light Theme</string>
    <string name="settings_old_tabs">Use Tabs</string>
    <string name="settings_old_tabs_icons">Use icons in tabs</string>
    <string name="settings_old_scrollable">Make tabs scrollable (May fix some issues)</string>
    <string name="settings_old_page_names">Use page names instead of My Library</string>
    <string name="settings_old_color_extraction">Get colors from album art</string>
    <string name="settings_old_choose_icon">Choose launcher icon</string>
    <string name="settings_header_about">About</string>
    <string name="settings_source_code">Source Code</string>
    <string name="settings_tap_to_view_code">Tap to view the source code of this app</string>
    <string name="settings_about_version">Version</string>
    <string name="settings_about_version_build">Build</string>
    <string name="settings_choose_icon_srini">Srini Kumar</string>
    <string name="settings_choose_icon_alex">Alex Mueller</string>
    <string name="settings_choose_icon_jaka">Jaka Mušič</string>
    <string name="settings_choose_icon_nguyen">A. H. Nguyen</string>
    <string name="settings_choose_icon_save_title">Save Changes?</string>
    <string name="settings_choose_icon_save_message">You modified the icon without saving. Would you like to save?</string>
    <string name="settings_choose_icon_save_positive">Yes</string>
    <string name="settings_choose_icon_save_negative">No</string>
    <string name="settings_choose_icon_save_neutral">Cancel</string>
    <string name="settings_donate_disambiguation_title">Donate Using</string>
    <string name="settings_donate_disambiguation_play">Google Play</string>
    <string name="settings_donate_disambiguation_paypal">PayPal</string>
    <string name="settings_donate_price_title">Select Amount</string>
    <string name="settings_donate_price_1">$1.00</string>
    <string name="settings_donate_price_5">$5.00</string>
    <string name="settings_donate_price_10">$10.00</string>
    <string name="settings_donate_price_25">$25.00</string>
    <string name="settings_donate_price_50">$50.00</string>
    <string name="settings_donate_terms_popup_title">PayPal donations have moved.</string>
    <string name="settings_donate_terms_popup_message">Google\'s terms state that I do not have a right to add PayPal donations to this app if I want it to stay on the Play Store.
    You will be redirected to the Google+ Community for this app to donate. Continue?</string>
    <string name="settings_donate_terms_popup_pos">Yes</string>
    <string name="settings_donate_terms_popup_neg">No</string>
    <string name="settings_tester_regester_confirmation">You are now a tester</string>
    <string name="settings_tester_unregister_confirm">You are no longer a tester</string>
    <string name="settings_tester_unregister_popup_title">Are you sure?</string>
    <string name="settings_tester_unregister_popup_message">Are you sure you want to stop being a tester?</string>
    <string name="settings_unregister_popup_yes">Yes</string>
    <string name="settings_unregister_popup_no">No</string>
    <string name="settings_tester_already_registered">You are already a tester</string>
    <string name="internal_tester_warning_title">Warning</string>
    <string name="internal_tester_warning">You are running internal testing software. It may be unfinished. Do not distribute.</string>
    <string name="internal_tester_accept">Accept</string>
    <string name="internal_tester_dont_show_again">Don\'t show again</string>
    <string name="internal_tester_error">An error occurred</string>
    <string name="setup_intro_description">Welcome to GEM Player!</string>
    <string name="setup_promo_1_title">Customisable</string>
    <string name="setup_promo_1_desc">With the UI Customizer, you can make GEM look the way <b>you</b> want</string>
    <string name="setup_promo_2_title">Powerful</string>
    <string name="setup_promo_2_desc">GEM is a powerful but lightweight music player</string>
    <string name="setup_end_message">Enjoy!</string>
    <string name="playback_play">Play</string>
    <string name="playback_pause">Pause</string>
    <string name="playback_next">Next</string>
    <string name="playback_prev">Previous</string>
    <string name="playback_queue">Queue</string>
    <string name="playback_repeat">Repeat</string>
    <string name="playback_shuffle">Shuffle</string>
    <string name="playing_album">Playing Album</string>
    <string name="playback_error_unsupported">This media type is not supported</string>
    <string name="playback_error_IO">Error playing file. Please try again</string>
    <string name="playback_error_generic">Couldn\'t play this song</string>
    <string name="permission_storage_explain_title">Storage Permission Required</string>
    <string name="permission_storage_explain_message">The storage permission is required for GEM player to be able to read your media library</string>
    <string name="permission_storage_required">Storage Permission Required</string>
    <string name="permission_storage_required_settings">@string/title_activity_settings</string>
    <string name="appwidget_text">Why are you using the widget?</string>
    <string name="msg_coming_soon">Coming Soon</string>
    <string name="msg_temp_removed">Removed for renovation</string>
    <string name="title_uri">Unknown</string>
    <string name="artist_uri">Unknown</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_ui_customiser">UiCustomiser</string>
    <string name="title_activity_album_details">ALBUM_DETAILS</string>
    <string name="title_activity_about">About</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="msg_update_available">Update Available</string>
    <string name="msg_update_content">An update for the latest version is available! Open Update page and download?</string>
    <string name="msg_crashed">Unfortunately, GEM Player has stopped</string>
    <string name="crashed_report">Report</string>
</resources>