<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 Substance Mobile
  ~
  ~ This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with this program. If not, see http://www.gnu.org/licenses/.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/navdrawer_main_category"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navdrawer_songs"
            android:icon="@drawable/ic_audiotrack_24dp"
            android:title="@string/page_songs" />

        <item
            android:id="@+id/navdrawer_album_icon"
            android:icon="@drawable/ic_album_24dp"
            android:title="@string/page_albums" />

        <item
            android:id="@+id/navdrawer_artists"
            android:icon="@drawable/ic_artist_24dp"
            android:title="@string/page_artists" />

        <item
            android:id="@+id/navdrawer_playlists"
            android:icon="@drawable/ic_queue_music_black_48dp"
            android:title="@string/page_playlists" />
    </group>

    <group
        android:id="@+id/navdrawer_other_category" >
        <item
            android:id="@+id/navdrawer_settings"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/action_settings"/>
        <item
            android:id="@+id/navdrawer_report_bug"
            android:icon="@drawable/ic_bug_report_24dp"
            android:title="@string/action_bug_report"/>
    </group>

</menu>